--- a/projects/2015178/readme.me
+++ b/projects/2015178/readme.me
@@ -9,3 +9,14 @@
 Προσωπικό Αποθετήριο Θέματος Εργασίας (Super Mario): https://github.com/p15syme/Super-Mario/tree/master
 Ενεργό URL παιχνιδιού: https://p15syme.github.io/Super-Mario/
 gh-pages: https://github.com/p15syme/Super-Mario/tree/gh-pages
+
+#Παραδοτέο 2:
+
+...
+
+#Παραδοτέο 3:
+
+...
+
+Παραδοτέο 4 - Τελική Αναφορά:
+...
