--- a/projects/2015178/readme.me
+++ b/projects/2015178/readme.me
@@ -1,20 +1,30 @@
-#Super Mario
+Super Mario
 
-###Αριστοτέλης Συμεωνίδης 
-###ΑΜ: Π2015178
+Αριστοτέλης Συμεωνίδης 
+ΑΜ: Π2015178
 
-##Παραδοτέο 1:
+Μάθημα: Πολυμέσα
+
+Παραδοτέο 1:
 
 Προσωπικό Αποθετήριο Μαθήματος (Multimedia): https://github.com/p15syme/mm
 Προσωπικό Αποθετήριο Θέματος Εργασίας (Super Mario): https://github.com/p15syme/Super-Mario/tree/master
 Ενεργό URL παιχνιδιού: https://p15syme.github.io/Super-Mario/
 gh-pages: https://github.com/p15syme/Super-Mario/tree/gh-pages
 
-#Παραδοτέο 2:
+Παραδοτέο 2:
 
-...
+Όσον αναφορά το δεύτερο παραδοτέο έγιναν οι εξής αλλαγές:
 
-#Παραδοτέο 3:
+Δημιουργήθηκε μία καινούργια πίστα μέσω του εργαλείου Tiled.
+Έγινε αλλαγή της εμφάνισης του Mario μέσω του εργαλείου GIMP 2
+Έγινε αλλαγή της εμφάνισης των coins, όπου βρίσκοντας μέσω του google search μία εικόνα με διάφορα tiles για το παιχνίδι, χρησιμοποίησα
+το GIMP 2 για να αποκόψω το κομμάτι της εικόνας και να φέρω τα coins στη μορφή που ήταν και η πρώτη εικόνα.
+Χρησιμοποίησα μερικούς από τους ήχους που υπήρχαν στον φάκελο, και προσέθεσα άλλους δύο, το worldmusic.mp3 και το mariodie.wav
+Προσέθεσα στο παιχνίδι score, lives και 2 bonus. Όποτε φτάνει ο παίχτης σε ένα συγκεκριμένο score του δίνει μία επιπρόσθετη ζωή
+και όταν χάνει μία ζωή του αφαιρούνται από το score 150 πόντοι.
+
+Παραδοτέο 3:
 
 ...
 
