--- a/projects/2015178/readme.me
+++ b/projects/2015178/readme.me
@@ -25,8 +25,11 @@ gh-pages: https://github.com/p15syme/Super-Mario/tree/gh-pages
 και όταν χάνει μία ζωή του αφαιρούνται από το score 150 πόντοι.
 
 Παραδοτέο 3:
-
-...
+Προσθήκη 2 επιπλέον εχθρών χρησιμοποιώντας το GIMP2 για να κάνω edit την εικόνα super_mario_tiles αλλά και για να δημιουργήσω τις άλλες δυο.
+Στον κώδικα χρησιμοποίησα όμοια του goomba. 
+Προσθήκη ενός τελεστή if, όπου πατώντας το spacebar σε κάνει teleport σε μία τοποθεσία του χάρτι.
+Προσθήκη ακόμη ενός τελεστή if  για τη δημιουργία animation, ωστόσο χωρίς τα επιθυμητά αποτελέσματα.
+Η προσπάθεια μου για δημιουργία menu ηταν ανεπιτυχής, όπου θα το προσθέσω τις επόμενες μέρες, ή μέσω pull request με το τελευταίο παραδοτέο.
 
 Παραδοτέο 4 - Τελική Αναφορά:
 ...
