--- a/projects/2016143/Παραδοτεο1.md
+++ b/projects/2016143/Παραδοτεο1.md
@@ -7,8 +7,7 @@
  [Forked repository](https://github.com/Tkaradimos/mm)
  
  ------------------------------------------------------------------------------------
-# [Αποθετήριο βιβλίου]
-## Εργασία Περιεχομένου
+# [Εργασία Περιεχομένου]
  ### [Αποθετήριο βιβλίου](https://tkaradimos.github.io/gr/)
  # [Σελίδα στο Facebook]
 ### [Σελίδα στο Facebook](https://www.facebook.com/HCI-ionio-438025583393215/)
